Add bidder and zookeeper

--- a/config.properties
+++ b/config.properties
@@ -7,15 +7,15 @@ AWS_ASG_SIRIUS='manager-agl'
 
 #
 # Return the IP of an EC2 instance filtered by its name
-# @param instance_name
+# @param tag_name
 # @param state (default: running)
 # @return the first IP corresponding to the filters
 #
 function findEC2InstanceIp() {
-  instance_name=$1
+  tag_name=$1
   state=${2:-'running'}
 
-  echo $(aws ec2 describe-instances --filters "Name=key-name, Values=$instance_name" "Name=instance-state-name, Values=$state" --output text | grep INSTANCES | cut  -f 15)
+  echo $(aws ec2 describe-instances --filters "Name=tag:Name, Values=$tag_name" "Name=instance-state-name, Values=$state" --query "Reservations[0].Instances[0].PublicIpAddress" --output text)
 }
 
 #
